--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    password: Herobrine
-    url: jdbc:mysql://localhost:3306/serverdb
+    password: Administrator
+    url: jdbc:mysql://localhost:3306/itemdb
     username: root
   jpa:
     hibernate:
